@@ -11,6 +11,7 @@ Now follows same naming theme as my other datapacks: modid.type.identifier
 - internal code change, statdata split into In Calculation data, and calculated data. Should prevent future bugs as now it's clear what context is given.
 But it probably means short term bugs.
 - datapack validation now runs after all datapacks are loaded, instead of on server start, this means invalid entries will no longer be shown on client
+- "any weapon" spell cast requirement now allows any item to cast the spell. Including non age of exile weapons
 
 v.1.4.5
 
